# pyaudioenhance

./: README.md  pyproject.toml
pyaudioenhance/: __init__.py  enhance.py  scale.py
pyaudioenhance/core/: enhance.py  resample.py  scale.py  split.py  unsplit.py
tests/: test_scale.py
tests/core/: test_scale.py
