[tool.poetry]
name = "pyaudioenhance"
version = "0.1.0"
description = "Enhance audio by up-sampling and re-scaling"
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
audio-enhance = "pyaudioenhance.__init__:enhance"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
scipy = "^1.11.4"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
